--- a/register.html
+++ b/register.html
@@ -7,6 +7,41 @@
 <link rel="shortcut icon" href=" img/bitbug_favicon.ico" /> 
 </head>
 <body>
-	
+<!-- header -->
+	<div class="header">
+		<div class="header_left">
+			<a href=""><img src="img/rlogo.png"/></a>
+			<a href=""><img src="img/rbd.png"/></a>
+		</div>
+		<div class="header_right">
+			<span>我已注册，现在就</span>
+			<input type="button" value="登录"/>
+		</div>
+	</div>
+
+<!-- content -->
+ <div class="content">
+ 	<div class="content_left">
+ 		<form>
+ 			<label>用户名</label> <input type="text" name="" placeholder="请设置用户名" /><br/>
+ 			<label>手机号</label> <input type="text" name="" placeholder="可用于登录和找回密码" /><br/>
+ 			<label>密码</label> <input type="text" name="" placeholder="请设置登录密码" /><br/>
+ 			<label>验证码</label> <input type="text" name="" placeholder="请输入验证码"/>
+ 			<input type="button" name="" value="获取短信验证码"/>
+ 			<br/>
+ 			<p>
+ 				<input type="checkbox" name=""/>
+ 				<span>阅读并接受</span>
+ 				<a href="#">《百度用户协议》</a>及
+ 				<a href="#">《百度隐私权保护声明》</a>
+ 			</p>
+ 			<br/>
+ 			<input type="submit" name="" value="注册"/>
+ 		</form>
+ 	</div>
+ 	<div class="content_right">
+ 		
+ 	</div>
+ </div>
 </body>
 </html>
