周六下午下课更新

--- a/register.html
+++ b/register.html
@@ -35,13 +35,34 @@
  				<a href="#">《百度用户协议》</a>及
  				<a href="#">《百度隐私权保护声明》</a>
  			</p>
- 			<br/>
+ 			
  			<input type="submit" name="" value="注册"/>
  		</form>
  	</div>
  	<div class="content_right">
- 		
+ 		<div class="cr_top">
+ 			<img src="img/phone.png"/>
+ 			<span>手机快速注册</span>
+ 		</div>
+ 		<div class="cr_content1">
+ 			<p class="black">请使用中国大陆手机号，编辑短信：</p>
+ 			<p class="red">6-14位字符（支持字母/数字/符号）</p>
+ 		</div>
+ 		<div class="cr_content1">
+ 			<p class="black">作为登录密码，发送至：</p>
+ 			<p class="red">1069 0691 036590</p>
+ 			<p class="black">即可登陆成功，手机号即为登录账号。</p>
+ 		</div>
+ 		<div class="cr_content1 cr_foot">
+ 			<img src="img/rwm.png">
+ 			<p class="black">请使用手机百度进行扫码</p>
+ 		</div>
  	</div>
  </div>
+
+ <!-- footer -->
+ 	<div class="foot">
+ 		<p>2018 ©Baidu</p>
+ 	</div>
 </body>
 </html>
